1998-07-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-line.[ch]: Beginnings of a polyline/curve item for
	the canvas.  It is not in the compilation process yet.

	* gnome-canvas-util.[ch]: New files with miscellaneous public
	utility functions for the canvas.

	* gnome-canvas-rect-ellipse.c (gnome_canvas_rect_draw): Fixed
	off-by-one error when painting unfilled rectangles.  Stupid X
	weird semantics.
	(gnome_canvas_ellipse_draw): Likewise for ellipses.  Gotta hate X.

Thu Jul 16 23:14:00 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-about.h, gnome-about.c (gnome_about_new):
 	const-correctness.
	(gnome_about_construct): new function.
	
1998-07-15  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-image.c (gnome_canvas_image_set_arg): Do not reset
	the width and height when the image is changed.  This makes
	updating an existing image easier.
	(gnome_canvas_image_destroy): Oops, the parent class destroy
	method was not being called.

	* gnome-canvas.c (gnome_canvas_item_grab): Test the return value
	of gdk_pointer_grab() before actually setting the grabbed item in
	the canvas structure.
	(gnome_canvas_item_raise gnome_canvas_item_lower): New public
	functions used to raise and lower items in their parent's z-order.

Wed Jul 15 22:31:58 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-popupmenu.h, gnome-popupmenu.c (__GNOME_POPUPMENU_H__):
 	added include guards, and LGPL. The author needs to put in the
	copyright owner, I didn't want to assume FSF. 

        * gnome-appbar.c (entry_insert_text_cb): Don't use 
	gtk_editable_get_position with Gtk 1.0

1998-07-15  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-popupmenu.c (gnome_app_create_popup_menus): Declare `void'
	return type.
	(gnome_app_create_popup_menus_custom): Likewise.
	* gnome-popupmenu.h: Coressponding changes.  Also add
	{BEGIN,END}_GNOME_DECLS gaurds.

Wed Jul 15 19:14:44 1998  Havoc Pennington  <hp@pobox.com>

	* TODO: Updated.
